<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frtn70</name>
  <version>0.0.0</version>
  <description>FRTN70 crazyflie swarm controller</description>
  <maintainer email="01ste02@gmail.com">badodds</maintainer>
  <license>MIT</license>
  <exec_depend>std_msgs</exec_depend>

  <depend>rclpy</depend>
  <depend>plotjuggler</depend>
  <depend>crazyflie_py</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>crazyflie_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>motion_capture_tracking_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <depend>crazyflie_py</depend>
    <depend>numpy</depend>
    <depend>rospy</depend>
  </export>
</package>
